--- a/src/Components/Auth/Auth.scss
+++ b/src/Components/Auth/Auth.scss
@@ -139,6 +139,7 @@
         align-items: flex-start;
         margin-left: 5px;
         width: 95%;
+        // background-color: red;
     }
     .header-input-container {
         width: 200px;
@@ -152,7 +153,7 @@
         margin: 0;
     }
     .header-register-button-container {
-        margin-left: 1060px;
+        margin-left: 160px;
         margin-top: -37px;
     }
 } 
