--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -7,7 +7,7 @@
     background-color: $primary-color;
 }
 .welcome-username {
-    font-size: 30px;
+    // font-size: 30px;
     position: absolute;
     right: 20px;
     top: 55px;
