--- a/src/Components/BabyDisplay/BabyDisplay.scss
+++ b/src/Components/BabyDisplay/BabyDisplay.scss
@@ -80,6 +80,11 @@
     // width: 300px;
     color: $font-color;
 }
+.shared-table {
+    border: solid white 1px;
+
+    // background-color: red;
+}
 .shared-expand-button {
     background: $button-background;
     box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.24);
@@ -179,5 +184,13 @@
         position: fixed;
         top: 10px;
         right: 10px;
+    }
+    .update-delete-container {
+        width: 95%;
+        height: 40px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-top: 20px;
     }
 }
