--- a/src/Components/LogDisplay/LogDisplay.scss
+++ b/src/Components/LogDisplay/LogDisplay.scss
@@ -15,7 +15,7 @@
     align-items: center;
     // width: 99%;
     margin-left: 5px;
-    max-width: 690px;
+    max-width: 790px;
     margin-bottom: 8px;
     box-shadow: 1px 1px 5px $lighter-highlight;
     height: 30px;
@@ -30,7 +30,7 @@
     justify-content: flex-end;
     align-items: center;
     // align-items: center;
-    max-width: 700px;
+    max-width: 800px;
     // width: 99%;
     // margin: auto;
     // margin-right: 0px;
@@ -40,18 +40,18 @@
     // margin-left: 20px;
     // font-size: 20px;
 }
-.log-label-asleep {
-    background-color: red;
-}
-.log-label-awake {
-    background-color: green;
-}
-.log-label-length {
-    background-color: blue;
-}
-.log-label-email {
-    background-color: orange;
-}
+// .log-label-asleep {
+//     background-color: red;
+// }
+// .log-label-awake {
+//     background-color: green;
+// }
+// .log-label-length {
+//     background-color: blue;
+// }
+// .log-label-email {
+//     background-color: orange;
+// }
 .log-display-asleep {
     width: 150px;
     height: 80%;
@@ -72,11 +72,11 @@
     height: 80%;
     // flex-grow: 1;
     padding-top: 6px;
-    // background-color: green;
+    // background-color: red;
     margin-left: 30px;
 }
 .log-display-name {
-    width: 100px;
+    width: 200px;
     height: 80%;
     padding-top: 6px;
     margin-left: 30px;
@@ -90,7 +90,7 @@
     width: 50px;
     // margin-top: 3.7px;
     margin-left: 3.7px;
-    // background-color: pink;
+    background-color: pink;
     // text-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
 //Collapsible Log Code
@@ -146,19 +146,23 @@
 
 }
 .collapsible-log-container {
-    max-width: 710px;
+    max-width: 810px;
     margin-top: 10px;
     margin-left: 10px;
     @include shadowbox-light;
     color: $font-color;
     max-height: 280px;
     overflow-y: auto;
-    // background-color: yellow;
+    // background-color: green;
 }
 Table {
     width: 99%;
 }
-
+.identifier-label {
+    margin-left: 10px;
+    margin-top: 5px;
+    font-weight: bold;
+}
 //SORTING CONTROLS
 .sort-direction {
     display: inline-block;
