added @extend to button css

--- a/src/Components/LogDisplay/LogDisplay.scss
+++ b/src/Components/LogDisplay/LogDisplay.scss
@@ -85,8 +85,8 @@
 }
 .log-display-delete {
     // margin-right: auto;
-    font-size: 10px;
-    height: 20px;
+    font-size: 10px !important;
+    height: 20px !important;
     width: 50px;
     // margin-top: 3.7px;
     margin-left: 3.7px;
